  to have your name and email address listed here unless you explicitly
  note otherwise.  Whether your name & email is actually listed depends
  on how extensive the change.  (If it's a minor code, document change,
  or spelling correction your name will probably not be listed.)

****************************   Release 3.1 ******************************
Modules 3.1.4
Fri Aug  3 12:45:55 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	* Some preliminary steps to a rpm file.
	* Added bz2 files to distribution mix.
	* Fixed "module swap" to put the substituted module in the
	  same path location as the old.  Also added a number of tests
	  for this feature.
	  (Bug was pointed out by Leo Butler <lbutler@brocade.com>)
	* Added tests for the "is-loaded" modulefile command introduced
	  back in 3.0.8-rko.
	* Fixed up some documents.
Modules 3.1.3
Wed Jul 11 14:30:53 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	* Added module-cvs modulefile for easy CVS/ftp access to the
	  modules CVS repository.
	* Added README.perl describing Ron Isaacson's Env::Modulecmd
	  perl module (Ron.Isaacson@morganstanley.com).
	* Added document file INSTALL.RH7x which explains how to set up
	  an modules environment for all users through the system shell
	  files.  Is specific to Linux/RedHat 7.x, but is of general
	  applicability.
	* Added further tests for modulefile "module use dir_path"
	* Fixed bug of unloading a modulefile with a "module use dir_path"
	* Environment variable contents are now quoted to preserve
	  any embedded environment variables. (Needed for versioning)
	* Added over 50 tests specific to module versioning, and testing
	  xgetenv.
	* Fixed the unsetenv on unload function, the feature added in 3.0.6-rko
	  was supposed to set the env.var. to the optional third argument.
	  This was to allow old env.var. values to be recovered by unraveling
	  a stack set in an other env.var.  Added tests for this feature.
	  This is used by the version modulefile.