@@ -1,4 +1,4 @@
-const char *version_string = "3.1.4.1";
-const char *date_string = "2001-08-03";
+const char *version_string = "3.1.4.2";
+const char *date_string = "2001-08-09";
 /* NEW TAG "modules-3-1-4" */
 /* OLD TAG "modules-3-1-3" */
