@@ -6,6 +6,11 @@
   or spelling correction your name will probably not be listed.)
 
 ****************************   Release 3.1 ******************************
+Modules 3.1.5	NOT RELEASED YET
+	Contributors:
+		Eric Stanley		<barnabas@knicknack.net>
+	* Fixed up cmdPath to remove individual items from a path
+	  (patch due to Eric Stanley).
 Modules 3.1.4
 Fri Aug  3 12:45:55 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
 	* Some preliminary steps to a rpm file.
